my inspiration section added

--- a/index.html
+++ b/index.html
@@ -130,6 +130,26 @@
     </section>
 
 
+    <!-- My Inspiration Section -->
+
+    <section>
+        <div class="container-div">
+
+            <div class="titels">
+                <h1>My Inspiration</h1>
+                <p>That's fantastic! Web development is a dynamic and exciting field with endless opportunities for creativity and problem-solving</p>
+            </div>
+
+            <div class="video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/JUwePydwbUI?si=7H4bpxg9yTSqjayb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+            </div>
+
+
+        </div>
+    </section>
+
+
 
     </main>
 
