current and next target section added

--- a/index.html
+++ b/index.html
@@ -149,6 +149,125 @@
         </div>
     </section>
 
+    <!-- My Current Target Section  -->
+
+    <section>
+         <div class="current-target-box">
+            <div class="content-box">
+                <h1>My Current Target</h1>
+                <p>My current target is to learn html css js in effective way</p>
+            </div>
+
+            <div class="boxs">
+    <!-- box 1 -->
+                <div style="background: rgba(255, 76, 30, 0.05);" class="box box1">
+                    <img src="./assets/html.png" alt="">
+                    <h1>HTML</h1>
+                    <p class="p1">HTML is the standard markup language for Web pages.
+
+                        With HTML you can create your own Website.HTML is easy to learn.</p>
+                    <p class="p2">Learn More</p>
+                </div>
+             <!-- box 2 -->
+                <div style="background: rgba(0, 76, 232, 0.05);" class="box box2">
+                    <img src="./assets/css.png" alt="">
+                    <h1>CSS</h1>
+                    <p class="p1">CSS is the language we use to style an HTML document.CSS describes how HTML elements should be displayed.</p>
+                    <p class="p2">Learn More</p>
+                </div>
+             <!-- box 3 -->
+                <div style="background: rgba(255, 223, 0, 0.05);" class="box box3">
+                    <img src="./assets/js.png" alt="">
+                    <h1>JavaScript</h1>
+                    <p class="p1">JavaScript is the world's most popular programming language.JavaScript is the programming language of the Web.JavaScript is easy to learn.</p>
+                    <p class="p2">Learn More</p>
+                </div>
+             
+
+
+
+
+
+            </div>
+
+
+         </div>
+    </section>
+
+    <!-- My Next Target section  -->
+
+    <section>
+        <div class="next-container">
+
+            <div class="titel-content">
+                <h1>My Next Target</h1>
+                <p>My next target is to learn ReactJs NodeJs and MongoDb in effective way</p>
+            </div>
+<!-- box one  -->
+            <div class="react-box">
+
+               <div class="img-box">
+                <img src="./assets/react.png" alt="">
+               </div>
+
+               <div class="contents-box">
+                <h1>ReactJS</h1>
+                <p class="p1">React is a JavaScript library for building user interfaces.React is used to build single-page applications.React allows us to create reusable UI components.</p>
+
+                <p class="p2">Learn More</p>
+
+
+               </div>
+
+
+            </div>
+<!-- box two           -->
+            <div class="react-box">
+
+               <div class="img-box">
+                <img src="./assets/nodejs.png" width="95px" alt="">
+               </div>
+
+               <div class="contents-box">
+                <h1>NodeJs</h1>
+                <p class="p1">Node.js is an open source server environment
+                    Node.js is free
+                    Node.js runs on various platforms (Windows, Linux, Unix, Mac OS X, etc.)
+                    Node.js uses JavaScript on the serve</p>
+
+                <p class="p2">Learn More</p>
+
+
+               </div>
+
+
+            </div>
+
+            <!-- 3rd box  -->
+
+            <div class="react-box">
+
+               <div class="img-box">
+                <img src="./assets/mongodb.png" width="95px" alt="">
+               </div>
+
+               <div class="contents-box">
+                <h1>MongoDB</h1>
+                <p class="p1">MongoDB is a document database. It stores data in a type of JSON format called BSON. which is a data structure composed of key value pairs similar to the structure of JSON objects.</p>
+
+                <p class="p2">Learn More</p>
+
+
+               </div>
+
+
+            </div>
+
+
+        </div>
+
+    </section>
+
 
 
     </main>
