--- a/index.html
+++ b/index.html
@@ -272,7 +272,29 @@
 
     </main>
 
-    <footer></footer>
+    <footer>
+
+        <section>
+
+            <div class="second-last">
+
+                <div class="content">
+                    <h1>I need Support</h1>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+
+                    <input type="text" placeholder="Suggest me any feedback for me" name="" id="">
+                    <button>Submit</button>
+
+
+                </div>
+
+
+
+            </div>
+
+        </section>
+
+    </footer>
     
 </body>
 </html>
