--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <p>my aspiration to embark on a journey of growth and mastery in the field of technology. As a Developer, I envision myself creating impactful solutions that enhance user experiences, solve complex problems, and contribute to the advancement of society. </p>
 
                     <div class="">
-                        <button class="btn">Contact with me</button>
+                    <a href="#home">   <input type="submit" value="Contact with me" class="btn" name="" id=""></a>
                     </div>
 
                 </div>
@@ -274,16 +274,17 @@
 
     <footer>
 
+    <!-- second last section  -->
         <section>
 
             <div class="second-last">
 
                 <div class="content">
                     <h1>I need Support</h1>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <p>support plays a crucial role in personal development, goal achievement, resilience, and overall well-being, making it an essential component of a successful and fulfilling life.</p>
 
                     <input type="text" placeholder="Suggest me any feedback for me" name="" id="">
-                    <button>Submit</button>
+                    <a href=""><button id="home">Submit</button></a>
 
 
                 </div>
@@ -293,6 +294,25 @@
             </div>
 
         </section>
+
+        <!-- last section  -->
+         <section>
+            <div class="footer">
+
+                <h1>An Open Commitment by Abo Raihan</h1>
+                <div class="footer-icons">
+
+                    <a href="https://web.facebook.com/groups/missionwebdevelopment10/?sorting_setting=CHRONOLOGICAL&_rdc=1&_rdr" target="_blank"><img src="./assets/facebook.png" alt=""></a>
+
+                    <a href="https://github.com/RaihanSoft/Assignment-One" target="_blank"><img src="./assets/github.png" alt=""></a>
+
+                    <a href="https://www.linkedin.com/uas/login?session_redirect=https%3A%2F%2Fwww.linkedin.com%2Ffeed%2F" target="_blank"><img src="./assets/linkedin-icon 1.png" alt=""></a>
+                </div>
+
+
+
+            </div>
+         </section>
 
     </footer>
     
