--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment-One</title>
     <link rel="stylesheet" href="./style.css">
+    <link style="border-radius: 50%;" rel="shortcut icon" href="./assets/hero.jpeg"type="image/x-icon">
 </head>
 <body>
 
